# SMT-IntGen

./: README.md  example.smt2  pyproject.toml  sympy_boolean_example.smt2  sympy_complex_example.smt2  sympy_linear_example.smt2  sympy_nonlinear_example.smt2  todo.txt
src/smt-intgen/: benchmark_generator.py  problem_converter.py
src/smt_intgen/: benchmark_generator.py  eq_converter.py  eq_creator.py
