[tool.poetry]
name = "smt-intgen"
version = "1.0.0"
description = ""
authors = ["maheenmatin <maheenmatin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "smt_intgen", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
sympy = "^1.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
